--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,10 @@
 		</script> -->
 	</head>
 
-	<body ng-app="webApp" class="container cbp-spmenu-push">
-		<div ui-view='content'><div class="loading"><i class="fa fa-spinner fa-spin fa-5x"></i></div></div>	
+	<body ng-app="webApp">
+		<div ui-view='header'></div>
+		<div ui-view='content'><div class="loading"><i class="fa fa-spinner fa-spin fa-5x"></i></div></div>
+		<div ui-view='footer'></div>
 	</body>
         <!-- inject:lib:js -->
         <!-- endinject -->
