--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1" />
         <meta name="renderer" content="webkit" />
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+		<base href="/" />
 		<title>资源平台</title>
 		<meta name="keywords" content="资源平台" />
         <meta name="description" content="资源平台" />
