--- a/src/dist.html
+++ b/src/dist.html
@@ -7,6 +7,7 @@
         <meta name="renderer" content="webkit">
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 		<meta http-equiv="Content-Security-Policy">
+		<base href="/" />
 		<title>资源平台</title>
 		<meta name="keywords" content="资源平台">
         <meta name="description" content="资源平台">
