更新目录树

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 		</script> -->
 	</head>
 
-	<body ng-app="webApp">
+	<body ng-app="webApp" ng-controller="MainCtrl">
 		<div ui-view='header'></div>
 		<div ui-view='content'><div class="loading"><i class="fa fa-spinner fa-spin fa-5x"></i></div></div>
 		<div ui-view='footer'></div>
