--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -111,7 +111,9 @@
 			</div>
 		</div>
 	</body>
-	<script type="text/javascript" language="javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.xdomainrequest.min.js"></script>
+	<script type="text/javascript" src="js/slides.jquery.js"></script>
 	<script type="text/javascript" src="js/slides.jquery.js"></script>
 	<script src="js/rolltext.js"></script>
 	<script type="text/javascript" src="js/home.js" ></script>
