--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -58,7 +58,8 @@
 								<input type="password" name="passwd" value="" placeholder="密码">
 								<img src="image/passwd.png">
 							</div>
-							<!--<input type="text" name="validCode" value=" 验证码" id="validCode" style="text-indent: 5px;"><br>-->
+							<!--<input type="text" name="validCode" value=" 验证码" id="validCode" style="text-indent: 5px;">-->
+							
 							<input type="checkbox" name="passwdRember" value="Password" id="checkBox"><label>记住密码</label>
 							<a href="#">忘记密码</a>
 						</form>
