--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
 	<body ng-app="webApp" ng-controller="MainCtrl">
 		<div ui-view='header'></div>
-		<div ui-view='content'><div class="loading"><i class="fa fa-spinner fa-spin fa-5x"></i></div></div>
+		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></i></div></div>
 		<div ui-view='footer'></div>
 	</body>
         <!-- inject:lib:js -->
