--- a/src/dist.html
+++ b/src/dist.html
@@ -34,7 +34,7 @@
 
 	<body ng-app="webApp" ng-controller="MainCtrl">
 		<div ui-view='header'></div>
-		<div ui-view='content'><div class="loading"><i class="fa fa-spinner fa-spin fa-5x"></i></div></div>
+		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></div></div>
 		<div ui-view='footer'></div>
 	</body>
     <script src="lib.min.js"></script>
