--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -20,7 +20,7 @@
 					<marquee direction="up" loop="-1" height="30px" scrolldelay="400" align="center" width="600px">
 						<ul>
 							<li class="rollli">
-								<a href="http://192.168.111.193:8018/pdf-reader/production/web/viewer.html?file=http://192.168.111.193:8018/resources/teachresearch/1.pdf" target="_blank"></a>
+								<a href="http://zy.tfedu.net/index/pdf-reader/web/viewer.html?file=/index/1.pdf" target="_blank"></a>
 							</li>
 						</ul>
 						
