add home video flash

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -78,9 +78,17 @@
 		</div>
 		<div id="lineThree">
 			<div class="nr">
-				<a class="videoBox" href="http://chat.tfedu.net/res/video/res-intro.MP4" target="_blank">
-					<img src="image/sp.jpg" width="428" height="339"/>
-				</a>
+				<div class="videoBox">
+					 <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="460" height="270" id="ASPFLV" align="middle">
+                       <param name="allowScriptAccess" value="sameDomain" />
+                       <param name="allowFullScreen" value="true" />
+                       <param name="movie" value="/assets/swf/Mp4.swf" />
+                       <param name="quality" value="high" />
+                       <param name="bgcolor" value="#ffffff" />
+                       <param name="FlashVars" value="qjmovie=http://chat.tfedu.net/res/video/res-intro.MP4&chang=0" />  
+                       <embed src="/assets/swf/Mp4.swf" allowFullScreen="true" FlashVars="qjmovie=http://chat.tfedu.net/res/video/res-intro.MP4&chang=0" quality="high" bgcolor="#ffffff" width="460" height="270" name="ASPFLV" align="middle" allowScriptAccess="sameDomain" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+                  </object>			
+				</div>
 				<div class="textBox">
 					<div class="textContent">
 						<h5>课程资源中心</h5>
