--- a/src/dist.html
+++ b/src/dist.html
@@ -37,7 +37,8 @@
 		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></div></div>
 		<div ui-view='footer'></div>
 	</body>
+	<script src="webconfig.js"></script>
     <script src="lib.min.js"></script>
     <script src="app.min.js"></script>
-
+    
 </html>
