--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 	</body>
-	<script type="text/javascript" src="js/webconfig.js"></script>
+	<script type="text/javascript" src="webconfig.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.xdomainrequest.min.js"></script>
 	<script type="text/javascript" src="js/slides.jquery.js"></script>
