--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
 		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></i></div></div>
 		<div ui-view='footer'></div>
 	</body>
+	<script src="webconfig.js"></script>
         <!-- inject:lib:js -->
         <!-- endinject -->
 
