--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -13,6 +13,9 @@
 				<div id="logoLeft">
 					<img src="image/logo.png" />
 				</div>
+				<div id="logoRight">
+					<a href="modules/client-download/index.html" target="_blank" class="client"></a>
+				</div>
 			</div>
 		</div>
 		<div id="rollLine">			
