add client downlad

--- a/modules/client-download/index.html
+++ b/modules/client-download/index.html
@@ -48,7 +48,7 @@ function MM_swapImage() { //v3.0
   <tr>
     <td height="94">&nbsp;</td>
     <td width="79">&nbsp;</td>
-    <td width="195" valign="bottom"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','image/button2.jpg',1)"><img src="image/button1.jpg" width="197" height="52" id="Image2" /></a></td>
+    <td width="195" valign="bottom"><a href="http://pan.baidu.com/s/1qYqwAXu" target="_blank" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','image/button2.jpg',1)"><img src="image/button1.jpg" width="197" height="52" id="Image2" /></a></td>
     <td width="209">&nbsp;</td>
   </tr>
   <tr>
