--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
+        <meta name="renderer" content="webkit">
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">		
 		<title>资源中心</title>
 		<link rel="stylesheet" href="css/home.css"/>
 		<link rel="stylesheet" href="css/slides.css"/>
