--- a/src/index.html
+++ b/src/index.html
@@ -36,10 +36,15 @@
 
 	<body ng-app="webApp" ng-controller="MainCtrl">
 		<div ui-view='header'></div>
-		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></i></div></div>
+		<div ui-view='content'><div class="loading"><i class="icon-spinner icon-spin icon-5x"></i></div></div>
 		<div ui-view='footer'></div>
 	</body>
+	<!--跨域兼容ie9-->
+	<!--[if lte IE 9]>
+	    <script src="http://7xt4p2.com2.z0.glb.qiniucdn.com/xdomain.min.js" data-slave="http://192.168.111.224:8880/proxy.html"></script>
+	<![endif]-->
 	<script src="webconfig.js"></script>
+	
         <!-- inject:lib:js -->
         <!-- endinject -->
 
