fix ie9 css line limite

--- a/src/dist.html
+++ b/src/dist.html
@@ -12,7 +12,7 @@
 		<meta name="keywords" content="资源平台">
         <meta name="description" content="资源平台">
 		<link rel="shortcut icon" href="favicon.ico">
-
+		<link rel="stylesheet" href="lib.min.css">
 		<link rel="stylesheet" href="app.min.css">
 
         <!-- 百度统计 -->
