--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -29,7 +29,6 @@
 								<a href="http://zy.tfedu.net/index/pdf-reader/web/viewer.html?file=/index/1.pdf" target="_blank"></a>
 							</li>
 						</ul>
-						
 					</marquee>
 				</div>						
 		</div>
@@ -104,10 +103,10 @@
 				<div class="statisticBox">
 					<div class="staticticContent">
 						<h5>资源统计</h5>
-						<p>资源总量： <a>312037</a>条、<a>609</a>GB</p>
-						<p>用户上传量： <a>726</a>条、<a>764</a>MB</p>
-						<p>日平均下载： <a>11</a>条、 <a>53</a>MB</p>
-						<p>基础资源最近更新：<a>0</a>条、 <a>0</a>TB</p>
+						<p>资源总量： <a>756812</a>条、<a>1.9</a>GB</p>
+						<p>用户上传量： <a>2502</a>条、<a>1.1</a>GB</p>
+						<p>日平均下载： <a>310</a>条、 <a>120</a>MB</p>
+						<p>基础资源最近更新：<a>3000</a>条、 <a>3</a>GB</p>
 					</div>
 				</div>
 			</div>
