--- a/modules/client-download/index.html
+++ b/modules/client-download/index.html
@@ -47,9 +47,9 @@ function MM_swapImage() { //v3.0
   </tr>
   <tr>
     <td height="94">&nbsp;</td>
-    <td width="79">&nbsp;</td>
+    <!--<td width="79">&nbsp;</td>-->
     <td width="195" valign="bottom"><a href="http://pan.baidu.com/s/1qYqwAXu" target="_blank" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','image/button2.jpg',1)"><img src="image/button1.jpg" width="197" height="52" id="Image2" /></a></td>
-    <td width="209">&nbsp;</td>
+    <td width="209" style="position: relative;"><a style="position: absolute; left: 25px; color: #fff; bottom: 0; font-size: 20px;letter-spacing: 1px;" href="http://pan.baidu.com/s/1qYqwAXu" target="_blank">普通下载</a></td>
   </tr>
   <tr>
     <td height="41">&nbsp;</td>
