--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -103,7 +103,7 @@
 				<div class="statisticBox">
 					<div class="staticticContent">
 						<h5>资源统计</h5>
-						<p>资源总量： <a>756812</a>条、<a>1.9</a>GB</p>
+						<p>资源总量： <a>756812</a>条、<a>1.9</a>TB</p>
 						<p>用户上传量： <a>2502</a>条、<a>1.1</a>GB</p>
 						<p>日平均下载： <a>310</a>条、 <a>120</a>MB</p>
 						<p>基础资源最近更新：<a>3000</a>条、 <a>3</a>GB</p>
