--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -140,4 +140,5 @@
 	<script type="text/javascript" src="js/slides.jquery.js"></script>
 	<script src="js/rolltext.js"></script>
 	<script type="text/javascript" src="js/home.js" ></script>
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1259878090'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1259878090' type='text/javascript'%3E%3C/script%3E"));</script>
 </html>
