fix student login

--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -132,6 +132,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="zwx" style="position: fixed;bottom: 10px; right:10px;z-index: 1000;">
+			<a href="http://zwx.tfedu.net/" target="_blank"><img src="http://7xl900.com1.z0.glb.clouddn.com/zwx.png"></a>
+		</div>
 	</body>
 	<script type="text/javascript" src="webconfig.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
