--- a/modules/client-download/index.html
+++ b/modules/client-download/index.html
@@ -117,7 +117,7 @@
             <br />
             地址：北京市海淀区西三旗建材城西路31号B座四层西区　邮编：100084
             <br />
-            Copyright<sup>©</sup>2005-2015，All Rights Reserved　京ICP备 10003979
+            Copyright<sup>©</sup>2005-2015，All Rights Reserved　京ICP备 10003979号-1
             <br />
             版权所有：中新金桥信息技术（北京）有限公司，知好乐教育科技集团有限公司
           </td>
