--- a/modules/login/login.html
+++ b/modules/login/login.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <div id="lineTwo">
+  <div id="lineTwo" style="margin-left:-540px">
     <div class="nr">
       <!-- <div class="s_lb" id="slides">
         <div class="slides_container">
@@ -30,9 +30,9 @@
       </div> -->
       <div class="loginBox">
         <div id="userSelect">
-          <img src="image/banner.png" width="1060" height="364" />
+          <img src="image/banner.png" width="1920px" height="700px" />
         </div>
-        <div class="loginInfo" style="padding-left:660px;">
+        <div class="loginInfo" style="margin-left:1100px;margin-top:100px">
           <form class="contentBox">
             <div>
               <img src="image/login_zx.png" style="padding-left:0px; width:280px; height:240px;" />
@@ -115,9 +115,9 @@
       <img src="image/3.jpg" />
     </div>
   </div> -->
-  <div id="lineFive">
+  <div id="lineFive" style="width:1920px;margin-top:330px;margin-left:-20px;">
     <div class="footBox">
-      <div class="footTextBox" style="width:1060px;margin-left:-1px;">
+      <div class="footTextBox" style="width:1920px;margin-left:-540px;">
         <p class="footInfo" style="text-align: center;">
           中新金桥信息技术（北京）有限公司
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
